@@ -647,6 +647,7 @@
 33) kernel: net: tcp: fix tcp_should_expand_sndbuf() to use tcp_packets_in_flight().<br>
 34) kernel: net: ipv6: addrconf: validate new MTU before applying it.<br>
 35) kernel: net: allow enable/disable XPS/RPS configure.<br>
+36) kernel: genirq: Introduce irq_do_set_affinity() to reduce duplicated code.<br>
 <br>
 <br>
 <b>TODO:</b><br>
